# Toblerone

./: .gitignore  README.md  Toblerone.py  Toblerone2.py  blubbernugget.bat  spook1_wav.h  spooks_png.h
C++/: CMakeLists.txt  main.cpp  resources.rc  spook1_ogg.h  spook1_wav.h  spook2_ogg.h  spooks_png.h
Python/: Toblerone.py
